# git-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: access.py  auth.py  backend.py  config.py  observability.py  server.py
tests/: conftest.py  test_access.py  test_auth.py  test_backend.py  test_config.py  test_server.py
